Fix check if Kafka client is configured properly
The Kafka clients have been considered properly configured if at least
one property had been set.

This has been changed to explicitly check for the "bootstrap.servers"
property being set to a non-null value. This way, the property can be
also used to enable/disable Kafka based integration tests.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>